# blockchain_project

./: README.md
py_scripts/: keypair.json  kpgen.py  program_id.txt
react-app/: package.json  tsconfig.json
react-app/public/: index.html
react-app/src/: App.css  App.tsx  index.tsx
react-app/src/Map/: Map.tsx
react-app/src/components/: Form.tsx  Google.tsx  HomePage.css  HomePage.tsx  Init.tsx  Main.tsx  MainApp.tsx  NavBar.css  NavBar.tsx  Navigation.tsx  QrCode.tsx  Setting.tsx  Verify.tsx
react-app/src/config/: chainConfig.ts
react-app/src/services/: Google.ts  solana.ts  solanaProvider.ts  utility.ts  web3auth.tsx
react-app/src/styles/: Add.css  Google.css  Home.module.css  main.scss
react-app/src/utils/: GoogleMapsUtils.ts
sol_program/: Cargo.toml
sol_program/src/: consts.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  utils.rs
sol_program/src/processor/: init.rs  verify.rs
sol_program/tests/: functional.rs
solana-test/: file.json  index.js  package-lock.json  package.json  sendSol.js
web-app/: .gitignore  README.md  package-lock.json  package.json
web-app/public/: index.html
web-app/src/: App.css  App.js
web-app/src/components/: Button.js  Footer.js  GoogleSheets.js  HomePage.css  HomePage.js  Input.js  Investor.css  Investor.js  Maintenance.css  Maintenance.js  NavBar.css  NavBar.js  Rental.css  Rental.js  SheetsMaintenance.js  SheetsRental.js  SpreadSheet.js  Verify.js  Waitlist.css  Waitlist.js
