[package]
name = "infinity_cube"
version = "0.1.0"
description = "Test dapp for Solana Riptide Hack"
authors = ["vadim4biz@gmail.com"]
repository = "https://github.com/AbelJSeba/InfinityCube.git"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.9"
borsh = "0.9.3"
borsh-derive = "0.9.1"
spl-token = "3.3.0"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"
tokio = "1.6"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]